# rust_regex_parser

./: Cargo.toml  README.md  regex.txt
src/: Makefile  cli.rs  grammar.pest  lib.rs  main.rs
tests/: regex_parser_unit_tests.rs
